Update, build for Qt5

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "lxqt-globalkeys-0.7.0.tar.xz": 0a5e4b50ccff15cc655d8c191c68e2e70c8d99c5
+  lxqt-globalkeys-20140802.tar.xz: 96613a822a3dfdcf26a19d372be4b2da464d6192
