--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lxqt-globalkeys-20140802.tar.xz: 96613a822a3dfdcf26a19d372be4b2da464d6192
+  lxqt-globalkeys-0.8.0.tar.xz: 6f88963801ca2d9f3be5879f8af524738ecdb9fc
