--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lxqt-globalkeys-0.9.0.tar.xz: ce949f1a2b7da50377da98ba04cd17da327b81a6
+  0.10.0.tar.gz: c78e2fb2e8d53616b39df03c131dd6bba9cc104c
