--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  0.10.0.tar.gz: c78e2fb2e8d53616b39df03c131dd6bba9cc104c
+  lxqt-globalkeys-0.10.0.tar.xz: 161cb4ed278dfcfdc1803cc04a601b5acc689f30
